other/b-d/check-nvidia-gpu/.kyverno-test/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: check-nvidia-gpus
  resources:
  - name: goodpod03
    values:
      request.operation: UPDATE
  - name: badpod01
    values:
      request.operation: UPDATE
  rules:
  - name: check-nvidia-gpus
    values:
      imageData.configData.config.Env: all
